--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.2"
+  },
+  "devDependencies": {
+    "prettier": "3.6.2"
   }
 }
